[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "ghutils-bot"
requires-python = ">=3.12"
dependencies = [
    "ghutils-common",
    "discord-py>=2.4.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "pygithub>=2.3.0",
    "fastapi>=0.111.0",
]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
source = "regex"
path = "../common/src/ghutils/common/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ghutils"]
