[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "dgu-common"
requires-python = ">=3.12"
dependencies = []

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
source = "regex"
path = "src/dgu_common/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dgu_common"]
