[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "ghutils-infrastructure"
requires-python = ">=3.12"
dependencies = [
    "ghutils-common",
    "aws-cdk-lib>=2.158.0",
    "aws-cdk-github-oidc>=2.4.1",
    "object-ci[aws-cdk] @ git+https://github.com/object-Object/ci@v0",
]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
source = "regex"
path = "../common/src/ghutils/common/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ghutils"]
